# CSV_analyzer

./: .coderabbit.yaml  .coverage  .cursorignore  .editorconfig  .env  .env.example  .gitignore  .pre-commit-config.yaml  .replit  AGENTS.md  DATA_DICTIONARY.md  DEVELOPMENT_SETUP.md  DEVELOPMENT_TOOLS.md  Makefile  README.md  ROADMAP.md  TODO_SUMMARY.md  app.py  chainlit.md  chainlit_app.py  check_integrity.py  config.yaml  convert_csvs.py  create_advanced_shells.py  detailed_player_check.py  expand_schema.py  final_schema_report.py  fix_game_duplicates.py  flow.py  knowledge_store.json  main.py  mkdocs.yml  nodes.py  normalize_db.py  pyproject.toml  pytest.ini  query_players.py  replit.md  requirements-test.txt  requirements.txt  (+3 more)
.chainlit/: config.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml
.nba_cache/: play_by_play_progress.json  population_progress.json
.roo/: mcp.json
docs/: data_dictionary.md  design.md  index.md  populate_audit_report.md  roadmap.md  todo_summary.md
docs/attachments/: content-1766453563288.md  content-1766453730603.md
docs/development/: setup.md  tools.md
frontend/: __init__.py  actions.py  cache.py  commands.py  data_utils.py  display.py  handlers.py  knowledge_utils.py  steps.py
plans/: plan.md
scripts/: analytics_demo.py  check_integrity.py  convert_csvs.py  create_advanced_metrics.py  create_advanced_shells.py  detailed_player_check.py  expand_schema.py  final_schema_report.py  fix_data_types.py  fix_game_duplicates.py  normalize_db.py  populate_play_by_play.py  populate_player_game_stats.py  populate_player_season_stats.py  query_players.py  verify_db.py
scripts/analysis/: create_advanced_metrics.py
scripts/maintenance/: fix_data_types.py  verify_db.py
scripts/migration/: final_schema_report.py  migration_report.txt
scripts/populate/: __init__.py  api_client.py  base.py  cli.py  config.py  database.py  init_db.py  populate_arenas.py  populate_franchises.py  populate_injury_data.py  populate_nba_data.py  populate_officials.py  populate_play_by_play.py  populate_player_game_stats.py  populate_player_game_stats_v2.py  populate_player_season_stats.py  populate_salaries.py  populate_shot_chart.py  populate_transactions.py  validation.py
src/backend/: __init__.py  config.py  flow.py  main.py  models.py
src/backend/nodes/: __init__.py  analysis.py  chart_generator.py  code_generation.py  combine_results.py  data_ingestion.py  entity.py  execution.py  planning.py  query.py  query_rewriter.py  response_grader.py  schema.py  sql_executor.py  sql_generator.py  table_selector.py  validation.py
src/backend/utils/: cache.py  call_llm.py  call_llm_streaming.py  data_source_manager.py  duckdb_client.py  embeddings.py  file_sanitizer.py  input_sanitizer.py  knowledge_store.py  logger.py  memory.py  nba_api_client.py  resilience.py
src/frontend/: __init__.py  actions.py  app.py  auth.py  cache.py  commands.py  config.py  data_utils.py  display.py  handlers.py  knowledge_utils.py  steps.py
src/frontend/public/: custom.css  theme.json
src/scripts/analysis/: check_db_state.py  create_advanced_metrics.py  create_advanced_shells.py  database_schema_analysis.py  deep_database_analysis.py  query_players.py
src/scripts/maintenance/: check_integrity.py  create_gold_entities.py  create_gold_tables.py  deduplicate_silver.py  detailed_player_check.py  fix_game_duplicates.py  normalize_db.py  verify_db.py
src/scripts/migration/: add_constraints.py  convert_csvs.py  expand_schema.py  extend_schema_basketball_reference.py  final_schema_report.py
src/scripts/populate/: __init__.py  api_client.py  base.py  cli.py  cli_registry.py  config.py  constants.py  database.py  exceptions.py  freshness.py  helpers.py  init_db.py  inspect_db.py  partitioning.py  pipeline.py  placeholders.py  populate_arenas.py  populate_br_player_box_scores.py  populate_br_schedule.py  populate_br_season_stats.py  populate_br_standings.py  populate_common_player_info.py  populate_draft_combine_stats.py  populate_draft_history.py  populate_estimated_metrics.py  populate_franchise_data.py  populate_franchises.py  populate_game_rotation.py  populate_injury_data.py  populate_league_game_logs.py  populate_league_leaders.py  populate_lineups.py  populate_matchups.py  populate_nba_data.py  populate_officials.py  populate_play_by_play.py  populate_player_awards.py  populate_player_game_stats.py  populate_player_game_stats_old.py  populate_player_game_stats_v2.py  (+17 more)
src/scripts/utils/: ui.py
src/tests/: README.md  conftest.py  golden_dataset.yaml
src/tests/fixtures/: mock_llm_responses.py
src/tests/integration/: test_full_flow.py  test_population_pipeline.py
src/tests/security/: test_executor.py  test_file_upload.py  test_safety_check.py
src/tests/unit/: TEST_SUMMARY.md  test_call_llm.py  test_check_integrity.py  test_clarify_query.py  test_comprehensive_edge_cases.py  test_create_advanced_metrics.py  test_data_processing_nodes.py  test_duckdb_requirements.py  test_entity_resolver.py  test_error_fixer.py  test_golden_dataset.py  test_knowledge_store.py  test_load_data.py  test_normalize_db.py  test_populate_init.py  test_populate_modules.py  test_populate_placeholders.py  test_populate_updated.py
tests/: README.md  conftest.py  test_api_client.py  test_base_populator.py  test_database_manager.py  test_populate_config.py
tests/fixtures/sample_data/: test_malformed.csv  (+1 more)
tests/integration/: test_full_flow.py
tests/security/: test_executor.py  test_file_upload.py  test_safety_check.py
tests/unit/: TEST_SUMMARY.md  test_call_llm.py  test_check_integrity.py  test_clarify_query.py  test_comprehensive_edge_cases.py  test_create_advanced_metrics.py  test_data_processing_nodes.py  test_duckdb_requirements.py  test_entity_resolver.py  test_error_fixer.py  test_knowledge_store.py  test_load_data.py  test_normalize_db.py  test_populate_init.py  test_populate_placeholders.py  test_populate_updated.py
utils/: call_llm.py  call_llm_streaming.py  data_source_manager.py  file_sanitizer.py  knowledge_store.py  nba_api_client.py
(+7 files in other folders)
