[project]
name = "webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "pocketflow>=0.0.3",
    "openai>=1.0.0",
    "requests>=2.28.0",
    "nba_api>=1.4.0",
    "chainlit>=1.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",    # Pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "C90",  # McCabe complexity
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "YTT",  # flake8-2020
    "ANN",  # flake8-annotations
    "ASYNC",# flake8-async
    "S",    # flake8-bandit
    "BLE",  # flake8-blind-except
    "FBT",  # flake8-boolean-trap
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "FA",   # flake8-future-annotations
    "ISC",  # flake8-implicit-str-concat
    "G",    # flake8-logging-format
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SLOT", # flake8-slots
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "INT",  # flake8-gettext
    "FIX",  # flake8-fixme
    "ERA",  # flake8-eradicate
    "PD",   # flake8-pandas-vet
    "PGH",  # pygrep-hooks
    "PL",   # Pylint
    "TRY",  # tryceratops
    "FLY",  # flynt
    "NPY",  # NumPy-specific rules
    "AIR",  # Airflow
    "PERF", # Perflint
    "FURB", # Refurb
    "RUF",  # Ruff-specific rules
]
ignore = [
    # Docstring rules - only ignore for conflicts
    "D203",  # 1 blank line required before class docstring (conflicts with D211)
    "D212",  # Multi-line docstring summary should start at the first line (conflicts with D213)
    
    # Formatting conflicts
    "E501",  # Line too long (handled by formatter)
    "COM812",  # Conflicts with ruff format
    "W505",   # Doc line too long (handled by formatter)
    
    # Pytest rules that are too strict for our test style
    "PT009", # Multiple @pytest.mark.parametrize() calls allowed
    "PT011", # Multiple @pytest.mark.parametrize() with same arguments allowed
    "PT012", # Multiple @pytest.mark.parametrize() with different arguments allowed
    
    # Exception handling - allow inline exception messages for clarity
    "TRY003",  # Avoid specifying long messages outside the exception class
    "EM101",   # Exception must not use string literal
    "EM102",   # Exception must not use f-string literal
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",    # Use of assert detected (allowed in tests)
    "D",       # Docstring requirements (relaxed for tests)
    "ANN",     # Type annotations (relaxed for tests)
    "PLR",     # Pylint refactor (relaxed for tests)
    "T201",    # Print statements allowed in tests
    "PLC0415", # Import outside top level (common in test fixtures)
    "E101",    # Mixed spaces and tabs
    "G004",    # Logging f-string
    "TRY",     # Exception handling patterns
    "FBT",     # Boolean trap
    "SIM117",  # Multiple with statements
    "B007",    # Unused loop control variable
    "PERF",    # Performance hints
    "SLF001",  # Private member access
    "BLE001",  # Blind except
    "C901",    # Too complex (test fixtures can be complex)
    "ERA001",  # Commented out code (test documentation)
]
"__init__.py" = [
    "D104",    # Missing docstring in public package
    "F401",    # Imported but unused (common in __init__.py for re-exports)
]
"**/migrations/*.py" = [
    "D",       # No docstrings required in migrations
    "E501",    # Allow long lines in migrations
]
# Backend nodes - node pattern requires specific method signatures
"src/backend/nodes/*.py" = [
    "ANN",     # Type annotations (node pattern has specific requirements)
    "D102",    # Missing docstring in public method (inherited from Node)
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches (analysis logic)
    "PLR0915", # Too many statements
    "PLR2004", # Magic value in comparison
    "C901",    # Too complex
    "E402",    # Module import not at top (logger pattern)
    "G004",    # Logging f-string
    "G003",    # Logging string concat
    "TRY401",  # Verbose log message
    "TRY300",  # Try-consider-else
    "TRY301",  # Raise in try
    "BLE001",  # Blind except (intentional for error handling)
    "FBT002",  # Boolean positional arg
    "S102",    # Use of exec (sandboxed executor)
    "RUF012",  # Mutable class default
    "B007",    # Unused loop variable
    "PLC0415", # Import outside top level
    "SIM102",  # Collapsible if
    "PERF401", # Manual list comprehension
    "PD003",   # Pandas isna vs isnull
]
# Backend utilities
"src/backend/utils/*.py" = [
    "ANN",     # Type annotations
    "D",       # Docstrings
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "C901",    # Too complex
    "G004",    # Logging f-string
    "TRY401",  # Verbose log message
    "TRY300",  # Try-consider-else
    "BLE001",  # Blind except
    "PLW1508", # Invalid envvar default
    "T201",    # Print statements (legacy logging)
    "PD003",   # Use of isna instead of isnull
    "PERF401", # Manual list comprehension
    "PERF403", # Manual dict comprehension
    "FBT002",  # Boolean positional arg
]
# Backend flow and main
"src/backend/flow.py" = [
    "ANN",     # Type annotations
    "E402",    # Module import not at top
]
"src/backend/main.py" = [
    "ANN",     # Type annotations
    "E402",    # Module import not at top
    "T201",    # Print statements (CLI output)
    "G003",    # Logging string concat
    "G004",    # Logging f-string
]
# Frontend files
"src/frontend/*.py" = [
    "ANN",     # Type annotations
    "D",       # Docstrings
    "PLR",     # Pylint refactor
    "C901",    # Too complex
    "E402",    # Module import not at top
    "G004",    # Logging f-string
    "TRY",     # Exception handling
    "BLE001",  # Blind except
    "T201",    # Print statements (UI output)
    "FBT",     # Boolean trap
    "PD",      # Pandas vet
    "PERF",    # Performance hints
    "FIX002",  # TODO comments
]
"app.py" = [
    "D100",    # Missing module docstring
    "ANN",     # Type annotations
]
"sample_module.py" = [
    "D100",    # Missing module docstring
]

[tool.ruff.lint.pycodestyle]
max-line-length = 88

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
suppress-dummy-args = false
suppress-none-returning = false

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id", "input"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["webapp", "src"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-returns = 6
max-statements = 50

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
strict_equality = true
show_error_codes = true
follow_imports = "silent"
ignore_missing_imports = true
mypy_path = "."
packages = ["src"]
explicit_package_bases = true

# Disable strict checks that are too aggressive for this codebase
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
warn_unused_ignores = false
warn_unreachable = false
extra_checks = false
strict_optional = false

# Per-module mypy settings
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.frontend.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.backend.utils.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.backend.nodes.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "backend.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "pocketflow",
    "pocketflow.*",
    "nba_api",
    "nba_api.*",
    "chainlit",
    "chainlit.*",
    "pandas",
    "pandas.*",
    "matplotlib",
    "matplotlib.*",
    "openai",
    "openai.*",
    "requests",
    "requests.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["webapp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "htmlcov"]
skips = ["B101"]  # Skip assert warnings
