[project]
name = "webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "pocketflow>=0.0.3",
    "openai>=1.0.0",
    "requests>=2.28.0",
    "nba_api>=1.4.0",
    "chainlit>=1.0.0",
    "duckdb>=1.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "numpy>=1.24.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pip-audit>=2.7.0",
    "interrogate>=1.7.0",
    "commitizen>=3.0.0",
    "vulture>=2.11",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["reference/"]

[tool.ruff.lint]
ignore = [
    # Formatting/style preferences
    "E501",    # Line too long - not critical, formatter handles most cases
    "G004",    # Logging f-strings are fine (more readable)
    "G003",    # Logging string concat is sometimes clearer
    "COM812",  # Trailing comma (conflicts with formatter)
    
    # Documentation - enforce incrementally
    "D100",    # Missing docstring in public module
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D107",    # Missing docstring in __init__
    
    # Type annotations - enforce incrementally
    "ANN001",  # Missing type annotation for function argument
    "ANN002",  # Missing type annotation for *args
    "ANN003",  # Missing type annotation for **kwargs
    "ANN201",  # Missing return type annotation for public function
    "ANN202",  # Missing return type annotation for private function
    "ANN205",  # Missing return type annotation for static method
    "ANN401",  # Dynamically typed expressions (typing.Any)
    
    # Code structure - acceptable in this codebase
    "E402",    # Module level import not at top (needed for conditional imports)
    "TRY401",  # Verbose log message is acceptable
    "FIX002",  # TODO comments are acceptable during development
    "BLE001",  # Blind except is sometimes needed for resilient code
    "S110",    # try-except-pass is acceptable for optional features
    "TRY003",  # Long exception messages are fine for clarity
    "TRY300",  # Consider else block - stylistic preference
    "FBT001",  # Boolean positional args acceptable in some cases
    "FBT002",  # Boolean default values acceptable in some cases
    "PLC0415", # Import outside top-level acceptable for conditional imports
    "PLR2004", # Magic value comparison - acceptable in many contexts
    "PLR0911", # Too many return statements - acceptable for complex functions
    "PLR0912", # Too many branches - acceptable for complex functions
    "PLR0915", # Too many statements - acceptable for complex functions
    "C901",    # Complex structure - acceptable for some algorithms
    "RUF012",  # Mutable class default - acceptable when intentional
]
select = [
    "F",    # Pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "C90",  # McCabe complexity
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "YTT",  # flake8-2020
    "ANN",  # flake8-annotations
    "ASYNC",# flake8-async
    "S",    # flake8-bandit
    "BLE",  # flake8-blind-except
    "FBT",  # flake8-boolean-trap
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "FA",   # flake8-future-annotations
    "ISC",  # flake8-implicit-str-concat
    "G",    # flake8-logging-format
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SLOT", # flake8-slots
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "INT",  # flake8-gettext
    "FIX",  # flake8-fixme
    "ERA",  # flake8-eradicate
    "PD",   # flake8-pandas-vet
    "PGH",  # pygrep-hooks
    "PL",   # Pylint
    "TRY",  # tryceratops
    "FLY",  # flynt
    "NPY",  # NumPy-specific rules
    "AIR",  # Airflow
    "PERF", # Perflint
    "FURB", # Refurb
    "RUF",  # Ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
# Tests can use assert statements and magic values
"tests/**/*.py" = ["S101", "PLR2004", "ANN"]
# Scripts can use print statements, have less strict annotations, and use dynamic SQL
"scripts/**/*.py" = ["T201", "ANN", "PLR0915", "E501", "S608", "PLW0603", "B027", "S603", "PLR0913", "DTZ005", "ERA001"]
# Reference/external code has different standards
"reference/**/*.py" = ["ALL"]
# Backend nodes often have complex methods
"src/backend/nodes/*.py" = ["PLR0912", "PLR0911", "C901"]


[tool.ruff.lint.pycodestyle]
max-line-length = 88

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
suppress-dummy-args = false
suppress-none-returning = false

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id", "input"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["webapp", "src"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-returns = 6
max-statements = 50

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
strict_equality = true
show_error_codes = true
follow_imports = "silent"
ignore_missing_imports = true
mypy_path = "."
packages = ["src"]
explicit_package_bases = true
exclude = ["reference/", "tests/", "scripts/"]

# Disable strict checks that are too aggressive for this codebase
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
warn_unused_ignores = false
warn_unreachable = false
extra_checks = false
strict_optional = false

[[tool.mypy.overrides]]
module = [
    "pocketflow",
    "pocketflow.*",
    "nba_api",
    "nba_api.*",
    "chainlit",
    "chainlit.*",
    "pandas",
    "pandas.*",
    "matplotlib",
    "matplotlib.*",
    "openai",
    "openai.*",
    "requests",
    "requests.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["webapp"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "htmlcov"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = false
ignore-setters = false
fail-under = 80
exclude = ["setup.py", "docs", "build", "tests"]
ignore-regex = ["^get$", "^post$", "^put$", "^delete$", "^prep$", "^exec$"]
verbose = 1
quiet = false
whitelist-regex = []
color = true
generate-badge = "."
badge-format = "svg"

[tool.vulture]
exclude = ["tests/", ".venv/", "htmlcov/"]
ignore_decorators = ["@app.route", "@require_*"]
ignore_names = ["test_*", "setUp", "tearDown"]
min_confidence = 80
paths = ["src", "src/frontend/app.py"]
sort_by_size = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version"
]
update_changelog_on_bump = true
major_version_zero = true
